--- a/src/resources/js/components/footer/Footer.module.css
+++ b/src/resources/js/components/footer/Footer.module.css
@@ -1,3 +1,29 @@
+.socials {
+  display: flex;
+  justify-content: right;
+  padding: 3rem 5rem;
+}
+
+.socials div:nth-child(1) {
+  margin-right: 1rem;
+  padding-top: 0.5rem;
+  font-size: 1.3rem;
+  color: rgb(121, 120, 120);
+}
+
+.socials div:nth-child(2) {
+  margin-left: 1rem;
+}
+
+.socials div:nth-child(2) img {
+  margin: 0 0.5rem;
+  width: 2.8rem;
+}
+
+.copy {
+  cursor: pointer;
+}
+
 .content {
   background: rgb(8,26,95);
   padding: 2rem 0 0 0;
@@ -58,9 +84,14 @@
 
 @media only screen and (max-width: 990px){
 	/*Big smartphones [426px -> 600px]*/
+  .socials,
   .top,
   .main {
     display: block;
+  }
+
+  .socials div:nth-child(1) {
+    margin-bottom: 0.5rem;
   }
 
   .top {
