--- a/src/resources/js/components/footer/Footer.module.css
+++ b/src/resources/js/components/footer/Footer.module.css
@@ -25,9 +25,14 @@
 }
 
 .content {
-  background: rgb(8,26,95);
+  --bg-opacity: 1;
+  background-color: rgba(8, 26, 95, var(--bg-opacity));
+  font-size: .875rem;
+  line-height: 1.25rem;
+  color: #d9dbe1;
+  background-image: url(../../../assets/images/pattern.svg);
+  background-size: 100%;
   padding: 2rem 0 0 0;
-  color: #d4d0d0;
 }
 
 .top {
