--- a/src/resources/js/components/homepage/HomePage.module.css
+++ b/src/resources/js/components/homepage/HomePage.module.css
@@ -1,15 +1,12 @@
-.section_one {
+.section_one,
+.sub_section_two,
+.section_three {
   display: flex;
   justify-content: center;
 }
 
 .section_two {
   margin-top: 5rem;
-}
-
-.sub_section_two {
-  display: flex;
-  justify-content: center;
 }
 
 .section_one {
@@ -143,12 +140,112 @@
   max-width: 780px
 }
 
+.section_three {
+  text-align: left;
+}
+
+.section_three h1 {
+  font-size: 1.8rem;
+  line-height: 2rem;
+  font-weight: 500;
+  color: #000000;
+}
+
+.section_three p {
+  --text-opacity: 1;
+  color: rgba(18,45,151,var(--text-opacity));
+  line-height: 2rem;
+}
+
+.section_three span {
+  font-weight: 600;
+}
+
+.form_container {
+  margin: 6rem 3rem 0 0;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+.input_container {
+  max-width: 600px;
+}
+
+input[type=text],
+.select {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  border-radius: 625rem;
+  padding: 2rem 1.5rem;
+  border: 1px solid #555a5b;
+  height: 3.5rem;
+}
+
+input[type=text],
+.select {
+  width: 95%;
+}
+
+input[type=text] {
+  margin: 1.5rem 0 0.75rem 0;
+}
+
+.select {
+  margin-bottom: 2rem;
+}
+
+input:focus {
+  outline: none;
+}
+
+input[type=number],
+select,
+select:focus {
+  outline: none;
+  border: none;
+  background: none;
+}
+
+.join_btn {
+  background: rgb(18,45,151);
+  color: #ffffff;
+  padding: 0.5rem 0 0.3rem 6rem;
+  border-radius: 2rem;
+  font-weight: bold;
+  display: flex;
+}
+
+.join_btn:hover {
+  color: #ffffff;
+}
+
+.join_btn span {
+  margin-top: 0.5rem;
+}
+
+.forward_arrow {
+  background: #ffffff;
+  border-radius: 100%;
+  max-width: 2.5rem;
+  padding: 0.3rem;
+  margin: 0 0.5rem 0 6rem;
+}
+
+.forward_arrow img {
+  width: 2rem;
+}
+
 @media only screen and (max-width: 1365px){
 	/*Big smartphones [426px -> 600px]*/
   .section_one {
     display: block;
   }
-   .sub_section_two {
+   .sub_section_two,
+   .section_three {
      display: flex;
      flex-direction: column;
      align-items: center;
@@ -164,5 +261,9 @@
 
   .card2 {
     bottom: -300%;
+  }
+
+  .woman_join_container {
+    margin-top: 3rem;
   }
 }
